added youtuber search, mass debugging, prominent bug with switch from both apis in one run